app/core/renderer/styles/index.scss
html,
body,
#app {
  position: relative;
  margin: 0;
  padding: 0;

  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  overflow: hidden;
}

html.dark {
  --el-box-shadow-lighter: 0 0 0 1px rgba(255, 255, 255, 0.2) !important;
  --el-box-shadow: 0 0 4px 1px rgba(29, 29, 29, 0.2) !important;
}

#app:has(div.coloring) {
  top: 1px;
  left: 1px;

  width: calc(100% - 4px);
  height: calc(100% - 4px);

  border: 1px solid var(--el-border-color);
  border-radius: 8px;
  transition: border 0.25s;
  &:hover {
    border: 1px solid var(--el-color-primary);
  }
}

.el-scrollbar__bar.is-vertical {
  width: 3px !important;
}

.el-scrollbar__bar.is-horizontal {
  height: 3px !important;
}

.touch-blur .fake-background {
  &:before {
    opacity: var(--fake-opacity, 0.75) !important;
  }
}

.fake-background.transition {
  transition: transform 0.25s;
}

.fake-background.border-radius {
  transition: border-radius 0.25s;
}

.fake-background.transition.border-radius {
  transition: transform 0.25s, border-radius 0.25s;
}

.fake-background.index-fix {
  z-index: var(--fake-fix-index, 0);
}

.fake-background {
  &:before {
    z-index: var(--fake-index, -1);
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: var(--fake-inner-opacity, 1);
    background: var(--fake-color, var(--el-fill-color-lighter));
    border-radius: var(--fake-radius, 8px);
  }
  position: relative; // make sure background adapt to parent
}

.color-template {
  --fake-inner-opacity: 0.5;
  --fake-color: var(--el-fill-color);
  border-color: var(--el-border-color);
}

span.tag {
  padding: 2px 4px;

  text-align: center;

  border-radius: 4px;
  background-color: var(--el-fill-color);
}

.Blur-Container {
  &.display {
    opacity: 1;
    pointer-events: unset;
  }
  z-index: 1000;
  position: absolute;

  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  //opacity: 0.5;
  //pointer-events: none;
  transition: 0.25s;
  border-radius: 4px 0 0 0;
  --fake-radius: 4px 0 0 0;

  --fake-opacity: 0.75;
  //backdrop-filter: blur(18px) saturate(180%) brightness(1.8);
}

html.touch-blur .Blur-Container {
  backdrop-filter: blur(18px) saturate(180%) brightness(1.8);
}

html.coloring .Blur-Container {
  top: 2px;

  height: calc(100% - 4px);
  width: 100%;
}

html.fullscreen .Blur-Container {
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;
}

.el-skeleton {
  opacity: 0.5;
  --el-skeleton-color: var(--el-fill-color-lighter) !important;
}

.cubic-transition,
.transition-cubic {
  transition: 0.25s cubic-bezier(0.785, 0.135, 0.15, 0.86);
}

